--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "element-plus": "^2.5.3",
+    "@element-plus/nuxt": "^1.0.7",
+    "@element-plus/icons-vue": "^2.3.1"
   }
 }
