--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "@element-plus/nuxt": "^1.0.7",
+    "@types/crypto-js": "^4.2.2",
+    "crypto-js": "^4.2.0",
+    "element-plus": "^2.5.3",
     "nuxt": "^3.15.4",
     "vue": "latest",
-    "vue-router": "latest",
-    "element-plus": "^2.5.3",
-    "@element-plus/nuxt": "^1.0.7",
-    "@element-plus/icons-vue": "^2.3.1"
+    "vue-router": "latest"
   }
 }
