--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/crypto-js": "^4.2.2",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.5.3",
+    "jszip": "^3.10.1",
     "nuxt": "^3.15.4",
     "vue": "latest",
     "vue-router": "latest"
