--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@element-plus/nuxt": "^1.0.7",
     "@types/crypto-js": "^4.2.2",
+    "cron-parser": "^4.9.0",
     "crypto-js": "^4.2.0",
     "element-plus": "^2.5.3",
     "jszip": "^3.10.1",
